# minirc

./: Cargo.toml  README.md
src/: argparse.rs  buffer.rs  buffers.rs  channel.rs  command.rs  connection.rs  interface.rs  lib.rs  main.rs  thread_tools.rs  ui.rs  utils.rs
tests/: command_test.rs
