[package]
name = "minirc"
version = "0.1.0"
authors = ["Alex Sun <alexsun82@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minirc"
path = "src/lib.rs"

[[bin]]
name = "minirc"
path = "src/bin/main.rs"

[dependencies]
argparse = "0.2.2"
termion = "1.5.5"
